   * :class:`camelot.view.action_steps.form_view.ToFirstForm`
   * :class:`camelot.view.action_steps.form_view.ToLastForm`
   * :class:`camelot.view.action_steps.form_view.ToNextForm`
   * :class:`camelot.view.action_steps.form_view.ToPreviousForm`
 
 * Reworked import/export action to handle tables with many columns and allow the
   user to customize the imported and exported columns.
 
 * New database profiles api in :class:`camelot.core.profile.ProfileStore`
 
 * Integer and float editors display `None` as an empty string
 
 * The `list_action` state is used to determine the icon in a table view
 
 * Delayed primary key type definition in default models, so the default models
   can be used with other types of primary keys, such as UUID.

 * See :ref:`migrate-latest` for documentation on how to upgrade an 
   existing Camelot project to the latest version.
 
 * Tested with SQLAlchemy 1.0.8
 
 * Removed the `ColoredFloatDelegate` as it is not a basic type of editor
 
 * `nullable`, `visible`, `validator` are dynamic field attributes

 * `ObjectAdmin` does introspeciton on properties to see if they have a setter defined

 * `EntityAdmin` does introspection on hybrid attributes to look for default field attributes

 * `camelot.view.filters` module has been moved to :mod:`camelot.admin.action.list_filter`

 * Remove 'delete_mode' and 'save_mode' Admin attributes, as this behavour is customizable with actions.

 * Remove the 'search_all_fields' Admin attribute, as this behavour can is customizable with the `get_search_fields` method.

 * Add the `get_search_fields` method to the `EntityAdmin` for fine grained customization of the fields to search.
 
 * The tableview shows the number of selected rows.
 

Release 13.04.13
----------------

 * Uses SQLAlchemy 0.8.0
 
 * All default models migrated from Elixir to Declarative
 
 * Replacements for most of the Elixir functions that are compatible with
   Declarative
   