@@ -30,7 +30,9 @@
 """Utility classes to import files into Camelot"""
 
 import csv
+import datetime
 import logging
+import os.path
 import string
 
 import six
@@ -254,84 +256,60 @@ class XlsReader( six.Iterator ):
     """
     
     def __init__( self, filename ):
-        import xlrd
-        try:
-            workbook = xlrd.open_workbook(filename, formatting_info=True)
-        except NotImplementedError:
-            # xlsx does not yet support formatting info
-            workbook = xlrd.open_workbook(filename)
-        self.xf_list = workbook.xf_list
-        self.datemode = workbook.datemode
-        self.format_map = workbook.format_map
-        self.sheets = workbook.sheets()
-        self.sheet = self.sheets[0]
-        self.current_row = 0
+        SUPPORTED_FORMATS = ('.xlsx', '.xlsm', '.xltx', '.xltm')
+        extension = os.path.splitext(filename)[1]
+        if extension not in SUPPORTED_FORMATS:
+            raise UserException(
+                u'{0} is not a supported file format'.format(extension),
+                detail = u'supported formats are ' + u', '.join(SUPPORTED_FORMATS)
+            )
+        import openpyxl
+        workbook = openpyxl.load_workbook(filename, data_only=True, keep_vba=False)
+        self.sheets = workbook.get_sheet_names()
+        self.sheet = workbook.get_active_sheet()
         self.date_format = local_date_format()
         self.locale = QtCore.QLocale()
-        
-    def get_format_string( self, xf_index ):
-        """:return: the string that specifies the format of a cell"""
-        # xlsx has no formatting info, as such the xf_index is None
-        if xf_index == None:
-            return '0.00'
-        try:
-            xf = self.xf_list[ xf_index ]
-        except IndexError:
-            return '0.00'
-        if xf._format_flag == 0:
-            return self.get_format_string( xf.parent_style_index )
-        f = self.format_map[ xf.format_key ]
-        return f.format_str
-        
-    def __next__( self ):
-        import xlrd
-        if self.current_row < self.sheet.nrows:
-            vector = []    
-            for column in range( self.sheet.ncols ):
-                cell = self.sheet.cell( self.current_row, column )
-                ctype = cell.ctype
-                value = ''
-                if ctype in( xlrd.XL_CELL_EMPTY, 
-                             xlrd.XL_CELL_ERROR,
-                             xlrd.XL_CELL_BLANK ):
-                    pass
-                elif ctype == xlrd.XL_CELL_TEXT:
-                    value = six.text_type( cell.value )
-                elif ctype == xlrd.XL_CELL_NUMBER:
-                    format_string = self.get_format_string( cell.xf_index )
-                    # try to display the number with the same precision as
-                    # it was displayed in excel
-                    precision = max( 0, format_string.count('0') - 1 )
-                    # see the arguments format documentation of QString
-                    # format can be eiter 'f' or 'e', where 'e' is scientific
-                    # so maybe the format string should be parsed further to
-                    # see if it specifies scientific notation.  scientific
-                    # notation is not used because it loses precision when 
-                    # converting to a string
-                    value = six.text_type( self.locale.toString( cell.value, 
-                                                           format = 'f',
-                                                           precision = precision ) )
-                elif ctype == xlrd.XL_CELL_DATE:
-                    # this only handles dates, no datetime or time
-                    date_tuple = xlrd.xldate_as_tuple( cell.value, 
-                                                       self.datemode )
-                    dt = QtCore.QDate( *date_tuple[:3] )
-                    value = six.text_type( dt.toString( self.date_format ) )
-                elif ctype == xlrd.XL_CELL_BOOLEAN:
-                    value = 'false'
-                    if cell.value == 1:
-                        value = 'true'
-                else:
-                    logger.error( 'unknown ctype %s when importing excel'%ctype )
-                vector.append( value )
-            self.current_row += 1
-            return vector
-        else:
-            raise StopIteration()
 
     def __iter__( self ):
-        return self
-    
+        import openpyxl
+        assert isinstance(self.sheet, openpyxl.worksheet.Worksheet)
+        for row in self.sheet.iter_rows():
+            vector = []
+            for cell in row:
+                value = cell.value
+                if value is None:
+                    value = ''
+                if value == True:
+                    value = 'true'
+                elif value == False:
+                    value = 'false'
+                elif isinstance(value, six.integer_types):
+                    # QLocale.toString doesn't seems to work with long ints
+                    value = six.text_type(value)
+                elif isinstance(value, float):
+                    format_string = cell.number_format
+                    ## try to display the number with the same precision as
+                    ## it was displayed in excel
+                    precision = max( 0, format_string.count('0') - 1 )
+                    ## see the arguments format documentation of QString
+                    ## format can be eiter 'f' or 'e', where 'e' is scientific
+                    ## so maybe the format string should be parsed further to
+                    ## see if it specifies scientific notation.  scientific
+                    ## notation is not used because it loses precision when 
+                    ## converting to a string
+                    value = six.text_type(self.locale.toString(
+                        value, format = 'f', precision = precision
+                    ))
+                elif isinstance(value, datetime.datetime):
+                    dt = QtCore.QDate(value.year, value.month, value.day)
+                    value = six.text_type(dt.toString(self.date_format))
+                elif isinstance(value, six.text_type):
+                    pass
+                else:
+                    logger.error('unknown type {0} when importing excel'.format(type(value)))
+                vector.append( value )
+            yield vector
+
 class RowDataAdmin(ObjectAdmin):
     """Decorator that transforms the Admin of the class to be imported to an
     Admin of the RowData objects to be used when previewing and validating the
